--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -15,6 +15,7 @@ main {
   flex: 1;
   padding-bottom: 40px; 
 }
+
 /* Header Styling */
 header {
   background-color: #333;
@@ -60,14 +61,14 @@ header {
   grid-template-columns: 1fr;
   grid-gap: 20px;
 }
-.band a:first-child .card {
-  background-color: #f0f0f0; 
-  border: 2px solid #333;
-  padding: 25px;
-}
+
 @media only screen and (min-width: 50px) {
   .band {
     grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr;
+  }
+  .band p:first-child{
+    font-size: 15px;  
+    font-weight: bold;
   }
   .item-1 {
     grid-column: 1 / -1;
@@ -151,7 +152,7 @@ footer {
   color: #fff;
   text-align: center;
   padding: 10px 0;
-  margin-top: auto; /****** */
+  margin-top: auto;
   width: 100%;
   position: sticky; /* Use sticky to fix footer at the bottom */
   bottom: 0;
