--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -3,4 +3,15 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: lightgray;
+}
+
+div{
+    padding-bottom: 20px;
+    margin: 5px;
+    border: 2px solid rgb(167, 167, 223);
+    text-align: center;
+}
+label{
+    font-size: 22px;
 }
