--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -6,7 +6,7 @@ body{
     background-color: lightgray;
 }
 
-div{
+#user-info,#tshirt, #size, #date{
     padding-bottom: 20px;
     margin: 5px;
     border: 2px solid rgb(167, 167, 223);
