--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -86,7 +86,7 @@
 
     /* Label styling */
 label {
-    position: absolute;
+    /* position: absolute; */
     transform: translateY(6px);
     color: rgba(0, 0, 0, 0.5);
     transition: all 0.5s ease;
@@ -149,3 +149,9 @@ input:focus, textarea:focus {
         padding: 10px 0;
         margin-top: 20px;
     }
+
+
+
+
+
+
