--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -23,7 +23,7 @@ main {
 
 article {
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: 5px solid black;
     padding: 20px;
     flex: 1 1 calc(33.333% - 40px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -31,7 +31,7 @@ article {
 }
 
 article:first-child {
-    background-color: #ffeb3b;
+    background-color: white;
 }
 
 h2 {
