Added the submit buttons

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -8,14 +8,19 @@ body{
     margin: 0;
 }
 
-#user-info,#tshirt, #size, #date{
+#user-info,#tshirt, #size, #date, #button{
     padding-bottom: 20px;
     margin: 5px;
     border: 2px solid rgb(167, 167, 223);
     text-align: center;
+    padding: 5px;
 }
 label{
     font-size: 22px;
+}
+button{
+    height: 2rem;
+    font-size: 1rem;
 }
 footer{
     
