--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -19,7 +19,7 @@ h1{
 form{
     max-width: 500px;
     margin:0 auto;
-    background-color: azure;
+    background-color: rgb(63, 132, 94);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rosybrown(0, 0, 0, 0.1)
@@ -48,8 +48,8 @@ button{
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: aquamarine;
-    color:chocolate;
+    background-color: rgb(10, 14, 12);
+    color:rgb(236, 236, 244);
     border: none;
     border-radius: 4px;
     font-size: 20px;
