--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -46,11 +46,18 @@ padding: 10px;
 width: 100%;
 }
 
+
 .hero img {
     display: block;
     margin: 0 auto;
     max-width: 100%;
     height: auto;
+}
+.hero:first-child h2 {
+    text-shadow: 2px 2px 4px rgba(59, 56, 56, 0.4);
+        font-size: 2em;
+        font-weight: bolder
+
 }
 
 
@@ -71,7 +78,6 @@ button:hover{
 
 .content {
     display: flex;
-   
     gap: 10px;
     margin-top: 20px;
     justify-content: center;
@@ -85,7 +91,7 @@ button:hover{
     height: 500px;
     border: 1px solid rgba(233, 239, 233, .5);
     border-radius: 20px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     text-align: left;
     margin: 20px;
     padding: 20px;
@@ -96,10 +102,8 @@ button:hover{
     display: block;
     margin: 0 auto;
 }
-.content article:first-child {
-    overflow:auto;
-  
-}
+
+
 
 footer {
     position: fixed;
