--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -7,11 +7,11 @@ body {
 
 .form_container {
     width: 700px;
-    height: 250px;
+    height: 530px;
     border-color: black;
     border: 1px;
     border-style: solid;
-    padding: 1em;
+    padding: 2em;
     background-color: bisque;
 }
 
@@ -25,3 +25,28 @@ input:valid {
     background-color: #ffe6e6;
   }
 
+  input[type=text], input[type=email], input[type=date], select {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  .color {
+    border: none;
+    line-height: 2em;
+    text-decoration: none;
+  }
+
+  input[type=radio] {
+    border: none;
+  }
+
+  select {
+    font-size: medium;
+    row-gap: 1.5rem;
+    width: 200px;
+  }
