Change <div> to <fieldset> and add <legend>; style both in CSS.

--- a/Form-Controls/css/styles.css
+++ b/Form-Controls/css/styles.css
@@ -34,13 +34,16 @@ form {
   display: grid;
   justify-content: center;
   row-gap: 1rem;
+  border: 1px solid #00000012;
+  padding: 20px;
+  border-radius: 3px;
 }
 
-label,
-p {
+legend,
+label {
   font-size: 1.5rem;
   letter-spacing: 1px;
-  color: #00000090;
+  color: #000000;
 }
 
 input {
@@ -73,7 +76,6 @@ select:focus {
 
 #date {
   cursor: pointer;
-  margin-bottom: 3rem;
 }
 
 button {
@@ -99,4 +101,8 @@ button {
 #gray {
   width: 3rem;
   box-shadow: none;
+}
+
+footer {
+  padding: 30px 0;
 }
