--- a/Form-Controls/css/styles.css
+++ b/Form-Controls/css/styles.css
@@ -106,3 +106,8 @@ button {
 footer {
   padding: 30px 0;
 }
+
+button:hover {
+  background-color: #0652a1;
+  transition: background-color 0.3s ease;
+}
