recover wireframe desktop

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -52,7 +52,7 @@ header {
   padding: 100px;
   text-align: center;
   margin: 0;
-  background-image: url(/img/header1.jpg);
+  background-image: url(/Wireframe/img/header1.jpg);
   background-size: cover;
   height: 100vh;
   text-align: left;
