Added border color,box shadow,background color

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -57,3 +57,23 @@
     border-radius: 4px;
     font-size: 1em;
   }
+  input[type="text"]:focus,
+  input[type="email"]:focus,
+  input[type="date"]:focus,
+  select:focus {
+    border-color: #1fac30;
+    outline: none;
+    box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
+  }
+  
+  button[type="submit"] {
+    background-color:purple;
+    color: white;
+
+    border: none;
+    padding: 10px 15px;
+    font-size: 1.2em;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+  }
