--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -77,3 +77,17 @@
     border-radius: 4px;
     transition: background-color 0.3s ease;
   }
+  button[type="submit"]:hover {
+    background-color: #45a049;
+  }
+  
+  footer {
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  footer h2 {
+    color: #6d6a6a;
+    font-size: 1rem%;
+  }
+  
