--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
-    background-color: #FDF0D5;
+    background-color: #D7CCC8;
     color: #FAEBD7;
     margin: 0;
 }
@@ -17,10 +17,10 @@ img {
 }
 
 header {
-    color: #F05133;
-    background-color: #efe0c3;
+    color: #780000;
+    background-color: #FAEBD7;
     margin: 0 auto;
-    text-shadow:  0 0 1px black;
+    text-shadow:  0 0 1px white;
     box-shadow: 0 0 10px black;
     padding: 10px;
 }
@@ -31,14 +31,20 @@ main {
     margin: 3vw auto;
 }
 
+h3 {
+    text-shadow: 0 0 5px black;
+}
+
 article {
     border: 4px solid #780000;
     border-radius: 30px;
     padding: 2rem;
+    text-shadow: 0 0 2px black;
+    box-shadow: 0 0 10px black;
 }
 
 article:first-child {
-    background-color: #669BBC;
+    background-color: #34779b;
     width: 90vw;
     margin: 3vw auto 2vw;
 }
@@ -46,19 +52,24 @@ article:first-child {
 #second, #third {
     width: 40vw;
     margin: 3vw auto;
-    background-color: #669BBC;
+    background-color: #003049;
 }
 
 button {
-    background-color: #003049;
+    background-color: #DAD7CD;
+    height: 2rem;
+    width: 7rem;
     border-radius: 10px;
-    box-shadow: 0 0 2px whitesmoke;
+    box-shadow: 0 0 2px black;
 }
 
 a {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
     text-decoration: none;
-    color: #D7CCC8;
-    text-shadow:  0 0 2px black;
+    color: #003049;
+    text-shadow:  0 0 1px rgb(220, 220, 220);
 }
 
 footer {
@@ -73,6 +84,6 @@ footer {
 }
 
 footer a {
-    color: #C1121F;
+    color: #000000;
     text-shadow: 0 0 3px #D7CCC8;
 }
