Fixing the Touch Target in CSS

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -79,6 +79,12 @@ font-size: 20px;
     background-color: #f1f1f1;
     margin-top: 15px;  
 }
-
+#nav {
+    @media (max-width: 600px) {
+       a {
+            padding: 16px 32px; /* Larger buttons on mobile */
+        }
+    }
+}
 
    
